k8s/apps/adguard-home/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  annotations:
    reloader.stakater.com/auto: "true"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: adguard/adguardhome:v0.108.0-b.82@sha256:16abf48a43cdbf1d115d4b4a3393d2b4006dacb235e31de4d748a266f80e2fb0
          ports:
            - name: dns-over-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-over-udp
              containerPort: 53
              protocol: UDP
            - name: http
              containerPort: 80
            - name: dns-over-tls
              containerPort: 853
              protocol: TCP
            - name: dns-over-quic
              containerPort: 853
              protocol: UDP
          volumeMounts:
            - name: work
              mountPath: /opt/adguardhome/work
            - name: conf
              mountPath: /opt/adguardhome/conf
            - name: certificates
              mountPath: /certs
          resources:
            limits:
              memory: 1536Mi
            requests:
              memory: 768Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
      volumes:
        - name: work
          hostPath:
            path: /mnt/local/adguard-home/work
            type: DirectoryOrCreate
        - name: conf
          hostPath:
            path: /mnt/local/adguard-home/conf
            type: DirectoryOrCreate
        - name: certificates
          secret:
            secretName: dns-starry-blue-certificate-secret
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
