k8s/apps/adguard-home/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service

spec:
  selector:
    app: default
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: v1
kind: Service
metadata:
  name: service-node

spec:
  selector:
    app: default
  type: NodePort
  ports:
    - name: dns-over-tcp
      port: 53
      targetPort: dns-over-tcp
      nodePort: 53
      protocol: TCP
    - name: dns-over-udp
      port: 53
      targetPort: dns-over-udp
      nodePort: 53
      protocol: UDP
    - name: dns-over-tls
      port: 853
      targetPort: dns-over-tls
      nodePort: 853
      protocol: TCP
    - name: dns-over-quic
      port: 853
      targetPort: dns-over-quic
      nodePort: 853
      protocol: UDP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: PreferDualStack
