k8s/apps/adguard-home/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route-dns-over-https

spec:
  routes:
    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`dns.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    - kind: Rule
      match: Host(`dns.starry.blue`)
      services:
        - name: service
          port: http
  tls:
    options:
      name: gateway
      namespace: traefik
    secretName: dns-starry-blue-certificate-secret
